# Mortal-Journey-Game

./: .gitattributes  .gitignore  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Camera.cpp  Camera.h  Combat.cpp  Combat.h  CombatState.cpp  CombatState.h  ConfigManager.cpp  ConfigManager.h  CultivationSystem.cpp  CultivationSystem.h  CultivationUIState.cpp  CultivationUIState.h  DialogueState.cpp  DialogueState.h  Enemy.cpp  Enemy.h  EquipmentSystem.cpp  EquipmentSystem.h  FIX_SUMMARY.md  GameCallbacks.cpp  GameCallbacks.h  GameSession.cpp  GameSession.h  GameState.cpp  GameState.h  InventoryState.cpp  InventoryState.h  ItemSystem.cpp  ItemSystem.h  MainMenuState.cpp  MainMenuState.h  MapEnemy.cpp  MapEnemy.h  Player.cpp  Player.h  (+25 more)
config/: cultivation.json  items.json  npcs.json  techniques.json
docs/: 剧情流程优化方案_前10章.md
